<resources>
    <string name="app_name">FoodFast</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Thông báo</string>
    <string name="no_img">no img</string>
    <string name="location_example">Trịnh Văn Bô, Hà Nội</string>
    <string name="search">Tìm kiếm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_history">Đơn hàng</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="describe_example">In a medium bowl, add ground chicken, breadcrumbs, mayonnaise, onions, parsley, garlic, paprika, salt and pepper. Use your hands to combine all the ingredients together until blended, but don\'t over mix.</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="discount">discount</string>
    <string name="description">description</string>
    <string name="category">category</string>
    <string name="name_category">name category</string>
    <string name="account">Account</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="lastname">lastname</string>
    <string name="phone">Phone</string>
    <string name="address">address</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="submit">Submit</string>
    <string name="submit_category">Submit category</string>
    <string name="submit_account">Submit account</string>
    <string name="fistname">fistname</string>
    <string name="confirm">Xác nhận</string>
    <string name="discount_format">Giảm %d %</string>
    <string name="cart_detail">Giỏ hàng của bạn</string>
    <string name="code_discount">Mã giảm giá:</string>
    <string name="total">Tổng tiền:</string>
    <string name="place_my_order">Đặt hàng ngay</string>
    <string name="cart_empty">giỏ hàng trống</string>
    <string name="waiting_confirm">Chờ xác nhận</string>
    <string name="confirmed">Đã xác nhận</string>
    <string name="delivered">Đã giao đơn</string>
    <string name="time_comfirm">Thời gian xác nhận</string>
    <string name="time_deliver">Thời gian nhận đơn</string>
    <string name="list_order">Các đơn hàng đã đặt</string>
    <string name="thank_you_order_success">Cảm ơn bạn!\nĐặt hàng thành công!</string>
    <string name="back_home">Trở lại trang chủ</string>
    <string name="order_success">Bạn vừa đặt thành công đơn hàng</string>
    <string name="three_hour_old">3 giờ trước</string>
    <string name="lose_internet">Lỗi kết nỗi INTERNET</string>
    <string name="order_comfirm">Đơn hàng của bạn đã được xác nhận</string>
    <string name="order_finish">Đơn hàng của bạn đã giao thành công</string>
    <string name="no_food">không có món ăn</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="resume">Hồ sơ của bạn</string>
    <string name="sign_in">Đăng nhập</string>
</resources>