<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context=".ui.home.HomeFragment"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:gravity="center"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="32dp"
                    android:gravity="center|start"
                    android:orientation="horizontal">


                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginStart="32dp">
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            style="@style/font_12_grey_medium"
                            android:text="@string/location_example"
                            android:drawablePadding="2dp"
                            android:drawableStart="@drawable/ic_location"/>
                    </FrameLayout>
                   <androidx.cardview.widget.CardView
                       android:layout_width="32dp"
                       android:layout_height="32dp"
                       app:cardCornerRadius="16dp">
                       <ImageView
                           android:id="@+id/avatar"
                           android:layout_width="32dp"
                           android:layout_height="32dp"
                           android:src="@drawable/ic_user_1"
                           android:contentDescription="@string/no_img" />
                   </androidx.cardview.widget.CardView>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="7dp"
            android:layout_marginHorizontal="32dp"
            android:padding="0dp"
            style="@style/MitaInputLayoutLogin"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/ic_search">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_12_grey_medium"
                android:lines="1"
                android:textColor="#80000000"
                android:paddingTop="3dp"
                android:paddingBottom="0dp"
                android:hint="@string/search"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">
            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                app:iss_auto_cycle="true"
                app:iss_period="1000"
                app:iss_delay="1000"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_category"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="8dp"
            tools:listitem="@layout/item_category"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty"
            style="@style/font_14_gray_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/no_food" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>